# MusicVisualizer

./: README.md
project/: CMakeLists.txt
project/include/: window.hpp
project/src/: main.cpp  window.cpp
